test/classes/initializers/generics/initAtomicsViaWrite.good
initAtomicsViaWrite.chpl:5: In initializer:
initAtomicsViaWrite.chpl:6: error: Field "head" used before it is initialized
